tests/baselines/reference/es6ImportNamedImportNoNamedExports(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
es6ImportNamedImportNoNamedExports_1.ts(1,10): error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.
es6ImportNamedImportNoNamedExports_1.ts(2,10): error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es6ImportNamedImportNoNamedExports_0.ts (0 errors) ====
    var a = 10;
    export = a;
    
==== es6ImportNamedImportNoNamedExports_1.ts (2 errors) ====
    import { a } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.
    import { a as x } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.